Update_about.html

--- a/about.html
+++ b/about.html
@@ -38,21 +38,17 @@
         />
       </div>
     </div>
-    <div style="display: flex;justify-content: center; align-items: center">
-      <div>
-        <video src="vdo.mp4" controls height="300" width="300"></video>
-      </div>
-      <div>
-        <iframe
-          width="300"
-          height="300"
-          src="https://www.youtube.com/embed/AzK6NFoBPXs?si=N0I1Nx5sR9NXpad4"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen
-        ></iframe>
-      </div>
+    <div style="display:flex;justify-content: center;align-self: center;">
+      <video src="vdo.mp4" controls height="300" width="300"></video>
+      <iframe
+        width="300"
+        height="300"
+        src="https://www.youtube.com/embed/AzK6NFoBPXs?si=N0I1Nx5sR9NXpad4"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen
+      ></iframe>
     </div>
 
     <audio src="hogwarts.mp3" autoplay></audio>
